force-app/main/default/objects/Package_Member_Market_Price__c/Package_Member_Market_Price__c.object-meta.xml
<CustomObject>
    <label>Package Member Market Price</label>
    <nameField>
        <label>Package Member Market Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Member Market Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>