force-app/main/default/objects/Package_Member_Market_Price__c/fields/Approved_Price__c.field-meta.xml
<CustomField>
    <fullName>Approved_Price__c</fullName>
    <formula>(List_Price__c * (1 - Approved_Price_Discount_Percent__c )) - Approved_Price_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>