force-app/main/default/objects/Package_Member_Market_Price__c/fields/Approved_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Price_Discount__c</fullName>
    <label>Approved Price Discount Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>