force-app/main/default/objects/Package_Member_Market_Price__c/fields/Approved_Price_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Approved_Price_Discount_Percent__c</fullName>
    <label>Approved Price Discount Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>