force-app/main/default/objects/Package_Member_Market_Price__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Package Member Market Prices</relationshipLabel>
    <relationshipName>Package_Member_Market_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>