force-app/main/default/objects/Package_Member_Market_Price__c/fields/Original_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_List_Price__c</fullName>
    <label>True List Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>