force-app/main/default/objects/Package_Member_Market_Price__c/fields/Package_Member__c.field-meta.xml
<CustomField>
    <fullName>Package_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Member</label>
    <referenceTo>Package_Members__c</referenceTo>
    <relationshipLabel>Package Member Market Prices</relationshipLabel>
    <relationshipName>Package_Member_Market_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>