force-app/main/default/objects/Package_Member_Market_Price__c/fields/True_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>True_Discount_Amount__c</fullName>
    <formula>Original_List_Price__c -  True_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True Discount Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>